@@ -3,16 +3,20 @@ import feyn
 import elementtree.ElementTree as elementtree
 
 class FeynMLReader:
+   """Class to construct a Feynman diagram from it feynML representation."""
 
    def __init__(self, filename):
+       """Read feynML from file."""
+
        self.root = elementtree.parse(filename).getroot()
        self.dict = {}
 
    def get_graph(self):
+       """Return the Feynman diagram represented by file contents."""
 
        fd = feyn.FeynDiagram()
        if self.root.tag != "graph":
-          raise "Error"
+          raise "feynML Error: <%>, not <graph>, as root element"%self.root.tag
        for element in self.root:
            if element.tag == "head":
               pass
@@ -25,28 +29,30 @@ class FeynMLReader:
            elif element.tag == "blob":
               fd.add( self.get_blob(element) )
            else:
-              raise "Error"
+              raise "feynML Error: invalid tag <%s> in <graph>"%element.tag
        return fd
 
    def get_vertex(self,element):
+       """Build a vertex from its feynML representation."""
 
        try:
           x = float(element.attrib["x"])
           y = float(element.attrib["y"])
        except:
-          raise "Error"
-       v = feyn.DecoratedPoint(x,y)
+          raise "feynML Error: invalid attribute for <vertex> element"
+       v = feyn.Point(x,y)
        self.dict[element.attrib["id"]] = v
        return v
 
    def get_line(self,element):
+       """Build a line from its feynML representation."""
 
        try:
           type = element.attrib["type"]
           p1 = self.dict[element.attrib["source"]]
           p2 = self.dict[element.attrib["target"]]
        except:
-          raise "Error"
+          raise "feynML Error: invalid attribute for <line> element"
        l = feyn.NamedLine[type](p1,p2)
        for subelement in element:
           if subelement.tag == "layout":
@@ -56,6 +62,7 @@ class FeynMLReader:
        return l
 
    def get_leg(self,element):
+       """Build a leg from its feynML representation."""
 
        try:
           type = element.attrib["type"]
@@ -63,24 +70,26 @@ class FeynMLReader:
           y = float(element.attrib["y"])
           p2 = self.dict[element.attrib["target"]]
        except:
-          raise "Error"
+          raise "feynML Error: invalid attribute for <leg> element"
        l = feyn.NamedLine[type](feyn.Point(x,y),p2)
        self.dict[element.attrib["id"]] = l
        return l
 
    def get_blob(self,element):
+       """Build a blob from its feynML representation."""
 
        try:
           x = float(element.attrib["x"])
           y = float(element.attrib["y"])
           shape = element.attrib["shape"]
        except:
-          raise "Error"
+          raise "feynML Error: invalid attribute for <blob> element"
        b = feyn.NamedBlob[shape](x,y,0.5)
        self.dict[element.attrib["id"]] = b
        return b
 
    def apply_layout(self,element,object):
+       """Apply the decorator encoded in a layout tag to a diagram object."""
 
        try:
           if element.tag == "arcthru" and isinstance(object,feyn.Line):
@@ -90,15 +99,15 @@ class FeynMLReader:
           elif element.tag == "label":
              return object
           else:
-             raise "bad layout"
+             raise "feynML Error: invalid tag inside <layout> element"
        except:
-          raise "Error"
+          raise "feynML Error while parsing <layout> element"
 
 
-
-x = FeynMLReader("test.feynml")
-f = x.get_graph()
-c = pyx.canvas.canvas()
-f.draw(c)
-c.writeEPSfile("thetest-2")
+if __name__=="__main__":
+   x = FeynMLReader("test.feynml")
+   f = x.get_graph()
+   c = pyx.canvas.canvas()
+   f.draw(c)
+   c.writeEPSfile("thetest-2")
 
